--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"  rel="stylesheet"    /> 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Develop/style.css" />
     <title>Work Day Scheduler</title> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
@@ -29,7 +29,7 @@
     </header>
 
     <div class="container"></div> <!--added a div for main container-->
-    <script src="script.js"></script> <!--call script file-->
+    <script src="./Develop/script.js"></script> <!--call script file-->
      
   </body>
 </html>
